# F4_Sandbox

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  Dockerfile  General.ioc  README.md
.devcontainer/: Dockerfile  devcontainer.json
App/Inc/: app.h
App/Src/: app.c
Core/Src/: main.c  stm32f4xx_it.c  syscalls.c  sysmem.c
Docs/env/dmitry/: README.md
Docs/env/dmitry/dev/: .clang-tidy  .clangd
Docs/env/dmitry/dev/.devcontainer/: devcontainer.json
Tests/: CMakeLists.txt  HostTestingGuide.md  README.md
Tests/host/: CMakeLists.txt  test_host_second.c  test_host_simple.c
cmake/stm32cubemx/: CMakeLists.txt
